--- a/app/src/styles/MeetingPage.css
+++ b/app/src/styles/MeetingPage.css
@@ -1,5 +1,3 @@
-/* src/styles/MeetingPage.css */
-
 html,
 body,
 #root {
@@ -93,108 +91,24 @@ body,
     display: inline-block;
 }
 
-.member-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    gap: 20px;
-}
-
-.member-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    margin-right: 20px
-}
-
-.member-item img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin-bottom: 5px;
-}
-
-.member-name-container {
-    display: flex;
-    align-items: center;
-}
-
-.member-name {
-    font-size: 13px;
-}
-
-.member-mic-icon {
-    border-radius: 50%;
-
-    background-color: #006fff;
-    color: #fefeff;
-    padding: 4px;
-
-    width: 9px;
-    height: 9px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 3px;
-}
-
-.member-mic-icon-slash {
-    color: #fa4e32; /* 设置斜杠颜色为红色 */
-    position: absolute;
-    top: 4px;
-    left: 7px;
-    width: 9px;  /* 确保宽度和高度相同 */
-    height: 9px; /* 确保宽度和高度相同 */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 2;
-}
-
-.member-mic-icon-slash svg {
-    /* transform: rotate(90deg); */
-    width: 100%;  /* 确保宽度和高度相同 */
-    height: 100%; /* 确保宽度和高度相同 */
-}
-
-.member-mic-icon-slash svg path {
-    fill: #fa4e32; /* 修改图标颜色 */
-    stroke: #fa4e32;
-    stroke-width: 50;
-}
-
-.host-icon-container {
-    position: absolute;
-    bottom: 5px;
-    left: 32px;
-
-    display: inline-block;
-    background-color: #ff8019; /* 背景颜色 */
-    border-radius: 50%; /* 圆形 */
-    width: 15px;
-    height: 15px;
-}
-
-.host-icon {
-    color: white; /* 图标颜色 */
-    font-size: 10px; /* 图标大小 */
-    margin-bottom: 2px;
-}
-
 .meeting-footer {
     display: flex;
     justify-content: space-between;
     padding: 5px 10px;
     background-color: #fff;
     align-items: center;
+    position: relative;
 }
 
 .left-controls,
 .center-controls {
     display: flex;
     gap: 20px;
+}
+
+.ending .left-controls,
+.ending .center-controls {
+    visibility: hidden;
 }
 
 .footer-item {
@@ -214,6 +128,18 @@ body,
 .footer-item span {
     font-size: 11px;
     margin-top: 3px;
+}
+
+.footer-item.fixed4 {
+    width: 45px;
+}
+
+.footer-item.fixed5 {
+    width: 55px;
+}
+
+.footer-item.fixed6 {
+    width: 65px;
 }
 
 .self-icon-stack {
@@ -316,6 +242,88 @@ body,
 .end-meeting-button:hover {
     background-color: #ff4d4f;
     color: #fff;
+}
+
+.ending .end-meeting-button {
+    display: none;
+}
+
+.end-meeting-overlay {
+    position: absolute;
+    right: 18px;
+    bottom: 65px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+
+.ending .end-meeting-overlay {
+    display: block;
+}
+
+.end-meeting-controls {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #fff;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.end-meeting-button2 {
+    background-color: #FA4E32;
+    border: 1px solid #FA4E32;
+    color: #fff;
+    padding: 7px 43px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 3px;
+}
+
+.end-meeting-button2:hover {
+    background-color: #E63922;
+    color: #fff;
+}
+
+.leave-meeting-button {
+    background-color: #fff;
+    border: 1px solid #CDD1D9;
+    padding: 5px 13px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.leave-meeting-button:hover {
+    background-color: #F3F3F4;
+}
+
+.ending-cancel-button {
+    background-color: #FFFFFF;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 5px 23px;
+    margin-right: 3px;
+
+    display: none;
+}
+
+.ending-cancel-button:hover {
+    background-color: #EBEDF2;
+}
+
+.ending .ending-cancel-button {
+    display: block;
+}
+
+.border-heng.hidden {
+    visibility: hidden;
+}
+
+.border-heng.ending {
+    visibility: visible;
 }
 
 .tooltip,
