--- a/app/src/styles/HomeModal.css
+++ b/app/src/styles/HomeModal.css
@@ -48,6 +48,7 @@
 .modal-main {
     position: relative;
     top: 30px;
+    height: 100%;
 }
 
 .modal-sub-title {
@@ -82,15 +83,15 @@
 }
 
 .name-input {
-    width: 40%;
+    width: 60%;
     padding: 8px;
-    margin: 5px 0;
+    margin: 5px 8% 5px 0;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
 .name-ok {
-    width: 20%;
+    width: 25%;
     padding: 10px;
     background-color: #0066ff;
     color: white;
@@ -107,7 +108,9 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-top: 200px;
+
+    position: absolute;
+    bottom: 30px;
 }
 
 .joining-button:hover {
