--- a/app/src/styles/MeetingPage.css
+++ b/app/src/styles/MeetingPage.css
@@ -163,8 +163,10 @@ body,
     position: absolute;
     top: 4px;
     left: 0px;
-    width: 15px;  /* 确保宽度和高度相同 */
-    height: 15px; /* 确保宽度和高度相同 */
+    width: 15px;
+    /* 确保宽度和高度相同 */
+    height: 15px;
+    /* 确保宽度和高度相同 */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -173,12 +175,15 @@ body,
 
 .self-icon-slash svg {
     /* transform: rotate(-10deg); */
-    width: 100%;  /* 确保宽度和高度相同 */
-    height: 100%; /* 确保宽度和高度相同 */
+    width: 100%;
+    /* 确保宽度和高度相同 */
+    height: 100%;
+    /* 确保宽度和高度相同 */
 }
 
 .self-icon-slash svg path {
-    fill: #fa4e32; /* 修改图标颜色 */
+    fill: #fa4e32;
+    /* 修改图标颜色 */
     stroke: #fa4e32;
     stroke-width: 50;
 }
@@ -385,4 +390,48 @@ body,
     border-right: 1px solid #d3d6db;
     height: 13px;
     margin: 0 5px;
+}
+
+.invite-modal .ant-modal-content {
+    padding-top: 5px;
+    width: 500px;
+    height: 350px;
+}
+
+.invite-modal .ant-modal-close {
+    top: 0;
+}
+
+.invite-modal .ant-modal-close-x {
+    font-size: 10px;
+}
+
+.invite-modal .ant-modal-footer {
+    bottom: 22px;
+    position: absolute;
+    left: 23%;
+}
+
+.invite-modal .ant-modal-footer button {
+    width: 130px;
+}
+
+.invite-modal .ant-modal-footer .ant-btn-primary {
+    background: #0066ff;
+}
+
+.invite-modal-title {
+    display: block;
+    font-size: 14px;
+    color: #4e5461;
+    text-align: center;
+    margin-right: 18px;
+    font-weight: normal;
+}
+
+.invite-modal-block-line {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    font-size: 12px;
+    color: black;
 }
